--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "@capacitor/android": "6.0.0",
     "@capacitor/app": "6.0.0",
     "@capacitor/core": "6.0.0",
-    "@capacitor/haptics": "6.0.0",
+    "@capacitor/haptics": "^6.0.0",
     "@capacitor/keyboard": "6.0.0",
     "@capacitor/status-bar": "6.0.0",
     "@ionic/angular": "^8.0.0",
